--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -3,14 +3,14 @@
         <div class="flex d-flex flex-column flex-sm-row align-items-center">
 
             <div class="mb-24pt mb-sm-0 mr-sm-24pt">
-                <h2 class="mb-0">Discussions</h2>
+                <h2 class="mb-0">Foro</h2>
 
                 <ol class="breadcrumb p-0 m-0">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a routerLink="/">Inicio</a></li>
 
                     <li class="breadcrumb-item active">
 
-                        Community
+                        Comunidad
 
                     </li>
 
@@ -27,7 +27,7 @@
     <div class="page-section">
 
         <div class="page-separator">
-            <div class="page-separator__text">Discussions</div>
+            <div class="page-separator__text">Buscar</div>
         </div>
 
         <div class="card">
@@ -85,7 +85,7 @@
                         </div>
                         <div class="col-auto d-flex flex-column align-items-center justify-content-center">
                             <h5 class="m-0">{{ question.answers.length }}</h5>
-                            <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
+                            <p class="lh-1 mb-0"><small class="text-70">{{ question.answers.length>1? 'respuestas': 'respuesta' }}</small></p>
                         </div>
                     </div>
                 </div>
