--- a/src/app/components/teacher-home/teacher-home.component.html
+++ b/src/app/components/teacher-home/teacher-home.component.html
@@ -1,104 +1,27 @@
-<div class="layout-sticky layout-sticky-subnav ">
-  <div class="preloader">
-    <div class="sk-chase">
-      <div class="sk-chase-dot"></div>
-      <div class="sk-chase-dot"></div>
-      <div class="sk-chase-dot"></div>
-      <div class="sk-chase-dot"></div>
-      <div class="sk-chase-dot"></div>
-      <div class="sk-chase-dot"></div>
+<div class="page-section">
+  <div *ngIf="user | async as user" class="container page__container">
+    <div class="page-separator">
+      <div class="page-separator__text">Mis Cursos</div>
     </div>
-
-    <!-- <div class="sk-bounce">
-            <div class="sk-bounce-dot"></div>
-            <div class="sk-bounce-dot"></div>
-            </div> -->
-    <!-- More spinner examples at https://github.com/tobiasahlin/SpinKit/blob/master/examples.html -->
-  </div>
-
-  <!-- Header Layout -->
-  <div class="mdk-header-layout js-mdk-header-layout">
-    <!-- Header Layout Content -->
-    <div class="mdk-header-layout__content">
-      <!-- Drawer Layout -->
-      <div class="mdk-drawer-layout js-mdk-drawer-layout" data-push data-responsive-width="992px">
-        <!-- Drawer Layout Content -->
-        <div class="mdk-drawer-layout__content page-content">
-          <div class="page-section">
-            <div *ngIf="user | async as user" class="container page__container">
-              <div class="page-separator">
-                <div class="page-separator__text">Mis Cursos</div>
+    <div class="row card-group-row">
+      <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col" *ngFor="let clase of user.courses; index as i">
+        <div *ngIf="(clase | clase | async) as class"
+          class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
+          data-trigger="click">
+          <a href="profesor/{{clase | idClase}}" class="js-image" data-position="center" data-height="auto"
+            data-domfactory-upgraded="image"
+            style="display: block; position: relative; overflow: hidden; background-image: url(&quot;../../assets/images/640x426class.jpg&quot;); background-size: cover; background-position: center center; height: 168px;">
+          </a>
+          <div class="card-body flex">
+            <div class="d-flex">
+              <div class="flex">
+                <a class="card-title" href="profesor/{{(clase | idClase)}}">{{ class.coursename }}</a>
+                <small class="text-50 font-weight-bold mb-4pt"> {{ user.displayName }}</small>
               </div>
-              <div class="row card-group-row">
-                <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col"
-                  *ngFor="let clase of user.courses; index as i">
-                  <div *ngIf="(clase | clase | async) as class"
-                    class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
-                    data-trigger="click">
-                    <a href="profesor/{{clase | idClase}}" class="js-image" data-position="center" data-height="auto" data-domfactory-upgraded="image" style="display: block; position: relative; overflow: hidden; background-image: url(&quot;../../assets/images/640x426class.jpg&quot;); background-size: cover; background-position: center center; height: 168px;">
-                      <img src="../../public/images/640x426class.jpg" alt="course" style="visibility: hidden;">
-                  </a>
-                    <div class="card-body flex">
-                      <div class="d-flex">
-                        <div class="flex">
-                          <a class="card-title"
-                            href="profesor/{{(clase | idClase)}}">{{ class.coursename }}</a>
-                          <small class="text-50 font-weight-bold mb-4pt"> {{ user.displayName }}</small>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-              <!-- Pagination
-                                <div class="mb-32pt">
-
-                                    <ul class="pagination justify-content-start pagination-xsm m-0">
-                                        <li class="page-item disabled">
-                                            <a class="page-link"
-                                               href="#"
-                                               aria-label="Previous">
-                                                <span aria-hidden="true"
-                                                      class="material-icons">chevron_left</span>
-                                                <span>Prev</span>
-                                            </a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link"
-                                               href="#"
-                                               aria-label="Page 1">
-                                                <span>1</span>
-                                            </a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link"
-                                               href="#"
-                                               aria-label="Page 2">
-                                                <span>2</span>
-                                            </a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link"
-                                               href="#"
-                                               aria-label="Next">
-                                                <span>Next</span>
-                                                <span aria-hidden="true"
-                                                      class="material-icons">chevron_right</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-
-                                </div>
-                                -->
             </div>
           </div>
         </div>
-        <!-- // END drawer-layout__content -->
       </div>
-      <!-- // END drawer-layout -->
     </div>
-    <!-- // END Header Layout Content -->
   </div>
-  <!-- // END Header Layout -->
 </div>
