--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -19,80 +19,85 @@
     </nav>
   </div>
 </div>
-<div *ngIf="(secciones | async)?.length > 1" class="bg-primary pb-4pt pt-32pt counter">
+<div *ngIf="sections.controls.length > 1" class="bg-primary pb-4pt pt-32pt counter">
   <div class="container page__container">
     <nav class="course-nav">
-      <div *ngFor="let j of [].constructor((secciones | async)?.length); let k = index">
+      <div *ngFor="let j of [].constructor(sections.controls.length); let k = index">
         <span class="material-icons"
           [ngClass]="{'text-success': k < currentQuestion, 'text-primary': k === currentQuestion}">help</span>
       </div>
     </nav>
   </div>
 </div>
-<div *ngFor="let seccion of secciones | async; let i = index; let l = count" class="section"
+<form [formGroup]="form" *ngFor="let seccion of sections.controls; let i = index; let l = count" class="section"
   [ngClass]="{'d-none': i != currentQuestion}">
-  <div class="bg-primary pb-lg-64pt pt-8pt">
-    <div class="container page__container">
-      <div class="js-player bg-primary embed-responsive embed-responsive-16by9 mb-32pt"
-        data-domfactory-upgraded="player">
-        <div class="player embed-responsive-item">
-          <div class="player__content">
-            <div class="player__image" style="--player-image: url(public/images/illustration/player.svg)"></div>
-            <a href="" class="player__play bg-primary">
-              <span class="material-icons">play_arrow</span>
-            </a>
+  <ng-container formArrayName="sections">
+    <div class="bg-primary pb-lg-64pt pt-8pt">
+      <div class="container page__container">
+        <div class="js-player bg-primary embed-responsive embed-responsive-16by9 mb-32pt"
+          data-domfactory-upgraded="player">
+          <div class="player embed-responsive-item">
+            <div class="player__content">
+              <div class="player__image" style="--player-image: url(public/images/illustration/player.svg)"></div>
+              <a href="" class="player__play bg-primary">
+                <span class="material-icons">play_arrow</span>
+              </a>
+            </div>
+            <div class="player__embed d-none">
+              <iframe class="embed-responsive-item"
+                src="https://player.vimeo.com/video/97243285?title=0&amp;byline=0&amp;portrait=0"
+                allowfullscreen=""></iframe>
+            </div>
           </div>
-          <div class="player__embed d-none">
-            <iframe class="embed-responsive-item"
-              src="https://player.vimeo.com/video/97243285?title=0&amp;byline=0&amp;portrait=0"
-              allowfullscreen=""></iframe>
+        </div>
+
+        <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
+          <h1 class="text-white flex m-0">Sección {{i + 1}} de {{l}}</h1>
+          <p class="h1 text-white-50 font-weight-light m-0">{{ time }}</p>
+        </div>
+
+        <p class="hero__lead measure-hero-lead text-white">{{ seccion.get('enunciado').value }}</p>
+        <button class="btn btn-white">Reproducir Audio</button>
+      </div>
+    </div>
+    <div class="navbar navbar-expand-md navbar-list navbar-light bg-white border-bottom-2 "
+      style="white-space: nowrap;">
+      <div class="container page__container">
+        <ul class="nav navbar-nav flex navbar-list__item">
+          <li class="nav-item">
+            <i class="material-icons text-50 mr-8pt">tune</i>
+            Escoge la opción correcta:
+          </li>
+        </ul>
+        <div class="nav navbar-nav ml-sm-auto navbar-list__item">
+          <div class="nav-item d-flex flex-column flex-sm-row ml-sm-16pt">
+            <button (click)="nextQuestion()"
+              class="btn justify-content-center btn-accent w-100 w-sm-auto mb-16pt mb-sm-0 ml-sm-16pt">
+              {{ currentQuestion < l - 1 ? 'Siguente pregunta' : 'Enviar' }}
+              <i class="material-icons icon--right">keyboard_arrow_right</i>
+            </button>
           </div>
         </div>
       </div>
-
-      <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
-        <h1 class="text-white flex m-0">Sección {{i + 1}} de {{l}}</h1>
-        <p class="h1 text-white-50 font-weight-light m-0">{{ time }}</p>
-      </div>
-
-      <p class="hero__lead measure-hero-lead text-white-50">{{ seccion.enunciado }}</p>
-      <button class="btn btn-white">Reproducir Audio</button>
     </div>
-  </div>
-  <div class="navbar navbar-expand-md navbar-list navbar-light bg-white border-bottom-2 " style="white-space: nowrap;">
-    <div class="container page__container">
-      <ul class="nav navbar-nav flex navbar-list__item">
-        <li class="nav-item">
-          <i class="material-icons text-50 mr-8pt">tune</i>
-          Escoge la opción correcta:
-        </li>
-      </ul>
-      <div class="nav navbar-nav ml-sm-auto navbar-list__item">
-        <div class="nav-item d-flex flex-column flex-sm-row ml-sm-16pt">
-          <button (click)="nextQuestion()"
-            class="btn justify-content-center btn-accent w-100 w-sm-auto mb-16pt mb-sm-0 ml-sm-16pt">
-            {{ currentQuestion < l - 1 ? 'Siguente pregunta' : 'Enviar' }}
-            <i class="material-icons icon--right">keyboard_arrow_right</i>
-          </button>
+    <div [formGroupName]="i"  class="container page__container">
+      <ng-container formArrayName="questions">
+        <div *ngFor="let pregunta of getPreguntas(seccion).controls; let m = index" class="page-section">
+          <div class="page-separator">
+            <div class="page-separator__text">{{ pregunta.get('pregunta').value }}</div>
+          </div>
+          <ng-container [formGroupName]="m">
+            <div *ngFor="let opcion of pregunta.get('opciones').value; let n = index" class="form-group">
+              <div class="custom-control custom-radio">
+                <input formControlName="chosen" id="opcion{{n}}pregunta{{m}}seccion{{i}}" type="radio" class="custom-control-input" [value]="opcion">
+                <label for="opcion{{n}}pregunta{{m}}seccion{{i}}" class="custom-control-label" >{{opcion}}</label>
+              </div>
+            </div>
+          </ng-container>
         </div>
-      </div>
+      </ng-container>
     </div>
-  </div>
-  <div class="container page__container">
-    <div *ngFor="let pregunta of seccion.preguntas; let m = index" class="page-section">
-      <div class="page-separator">
-        <div class="page-separator__text">{{pregunta.pregunta}}</div>
-      </div>
-      <div *ngFor="let opcion of pregunta.respuestas; let n = index" class="form-group">
-        <div class="custom-control custom-radio">
-          <input id="opcion{{n}}pregunta{{m}}seccion{{i}}" name="pregunta{{m}}seccion{{i}}" type="radio"
-            class="custom-control-input">
-          <label for="opcion{{n}}pregunta{{m}}seccion{{i}}" class="custom-control-label">{{opcion}}</label>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  </ng-container>
+</form>
 
-<pre>{{ secciones | async | json }}</pre>
 <pre>{{ form.getRawValue() | json }}</pre>
