--- a/src/app/components/student-report/student-report.component.html
+++ b/src/app/components/student-report/student-report.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="row" role="tablist">
         <div class="col-auto">
-          <a href="/profesor" class="btn btn-outline-secondary">Mis cursos</a>
+          <a href="/profesor/{{cid}}" class="btn btn-outline-secondary">Volver</a>
         </div>
       </div>
     </div>
