feat: student report char config

--- a/src/app/components/student-report/student-report.component.html
+++ b/src/app/components/student-report/student-report.component.html
@@ -61,7 +61,7 @@
                 <div class="container page-section">
                 </div>
                 <div class="myChart">
-                    <canvas id="canvas"></canvas> |
+                    <canvas #test id="canvas"></canvas> |
                 </div>
             </div>
         </div>
