--- a/src/app/components/course-report/course-report.component.html
+++ b/src/app/components/course-report/course-report.component.html
@@ -80,16 +80,16 @@
                     <div class="list-group-item p-3" *ngFor="let clase of user.courses; index as i">
                       <div *ngIf="(clase | students|async) as learners">
                         <div  class="row align-items-start">
-                            <div  *ngFor="let learner of learners; index as i" class="col-md-3 mb-8pt mb-md-0">
-                                <div class="media align-items-center">
-                                    <div class="media-left mr-12pt">
+                            <div  *ngFor="let learner of learners; index as i;" class="col-md-3 mb-8pt mb-md-0">
+                                <div *ngIf="learner| userName|async as learnername"class="media align-items-center">
+                                    <div  class="media-left mr-12pt" >
                                         <a href="" class="avatar avatar-sm">
                                             <!-- <img src="../../LB" alt="avatar" class="avatar-img rounded-circle"> -->
-                                            <span class="avatar-title rounded-circle">{{(learner| userName|async)[0]}}</span>
+                                            <span class="avatar-title rounded-circle">{{learnername[0]}}</span>
                                         </a>
                                     </div>
-                                    <div class="d-flex flex-column media-body media-middle">
-                                        <a href="/profesor/{{cid}}/{{learner| idStudent|async}}" class="card-title">{{learner| userName|async}}</a>
+                                    <div *ngIf="learner| idStudent|async as learnerid"  class="d-flex flex-column media-body media-middle">
+                                        <a href="/profesor/{{cid}}/{{learnerid}}" class="card-title">{{learnername}}</a>
                                     </div>
                                 </div>
                             </div>
