--- a/src/app/components/exercises/exercises.component.scss
+++ b/src/app/components/exercises/exercises.component.scss
@@ -20,3 +20,11 @@
 .counter {
   height: 5rem !important;
 }
+
+.page-separator__text {
+  font-size: 1.7rem;
+}
+
+.custom-control-label, .hero .lead, .hero__lead {
+  font-size: 1.2rem; 
+}
