--- a/src/app/components/student-report/student-report.component.html
+++ b/src/app/components/student-report/student-report.component.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="container page-section">
                   <div class="myChart">
-                    <canvas id="canvas"></canvas> |
+                    <canvas #canvas id="canvas"></canvas> |
                   </div>
                 </div>
             </div>
