--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,34 +1,50 @@
-  <div class="row login-body">
+<div class="row login-body">
     <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 left-login"></div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 text-align d-flex right-login">
-      <div class="custom-card">
-        <mat-card>
-          <div class="row">
-            <div class="col d-flex">
-              <img class="image-logo" src="assets/icons/logo_Apolo.svg" alt="">
-            </div>
-          </div>
-        <mat-card-content style="display: flex; flex-direction: column;">
+        <div class="custom-card">
+            <div class="card">
+                <div class="row">
+                    <div class="col d-flex">
+                        <img class="image-logo" src="assets/icons/logo_Apolo.svg" alt="">
+                    </div>
+                </div>
+                <div class="card-body" style="display: flex; flex-direction: column;">
 
-          <mat-form-field>
-            <mat-label>Correo Electrónico</mat-label>
-            <input matInput placeholder="pat@ejemplo.com" [formControl]="email" required />
-            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-          </mat-form-field>
+                    <div class="form-group">
+                        <label for="InputEmail">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [formControl]="email" required/>
+                    </div>
 
-          <mat-form-field>
-            <mat-label>Contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'"  [(ngModel)]="password">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
+                    <!-- <mat-form-field>
+                        <mat-label>Correo Electrónico</mat-label>
+                        <input matInput placeholder="pat@ejemplo.com" [formControl]="email" required />
+                        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                    </mat-form-field> -->
 
-          <button mat-raised-button color="primary" (click)="signin()">
-            Login
-          </button>
-          <br>
-          <div class="row m-auto">
+                    <div class="form-group">
+                        <label for="InputPassword">Contraseña</label>
+                        <input type="password" class="form-control" [type]="hide ? 'password' : 'text'" [(ngModel)]="password" />
+                        <!-- <button (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button> -->
+                        <button (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button" class="btn btn-default btn-circle">
+                          <i class="fas fa-eye"></i>
+                        </button>
+                    </div>
+
+                    <!-- <mat-form-field>
+                        <mat-label>Contraseña</mat-label>
+                        <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="password">
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field> -->
+
+                    <!-- <button mat-raised-button color="primary" (click)="signin()">
+                      Login
+                    </button> -->
+                    <button type="button" class="btn btn-info" (click)="signin()">Login</button>
+                    <!-- <div class="row m-auto">
             <h4>O entra usando</h4>
           </div>
           <div class="row d-flex m-auto">
@@ -42,14 +58,9 @@
                 <mat-icon><img src="assets/icons/microsoft-icon.svg" alt=""></mat-icon>
               </button>
             </div>
-          </div>
-        </mat-card-content>
-        <mat-card-content>
-
-        </mat-card-content>
-        </mat-card>
-      </div>
+          </div> -->
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-
+</div>
