--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,47 +1,68 @@
 .login-body {
-  background-image: url('/assets/images/cisneros-background.jpg');
-  background-size: 73%;
-  height: 100vh;
+    background-image: url('/assets/images/cisneros-background.jpg');
+    background-size: 73%;
+    height: 100vh;
 }
 
 .login-layout {
-  background: #FFFFFF;
+    background: #FFFFFF;
 }
 
 .custom-card {
-  margin: auto;
-
-  mat-card {
-    padding: 3rem;
-  }
+    margin: auto;
+    mat-card {
+        padding: 3rem;
+    }
 }
 
 .image-logo {
-  width: 6rem;
-  height: auto;
-  margin: auto;
-  margin-bottom: 1rem;
+    width: 6rem;
+    height: auto;
+    margin: auto;
+    margin-bottom: 1rem;
 }
 
 h4 {
-  font-family: Roboto, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 .custom-button {
-  background: #FFFFFF;
-
-  img {
-    display: flex;
-  }
+    background: #FFFFFF;
+    img {
+        display: flex;
+    }
 }
 
 .right-login {
-  background: rgba($color: grey, $alpha: 0.8);
-  align-items: center;
+    background: rgba($color: grey, $alpha: 0.8);
+    align-items: center;
 }
 
 @media screen and(max-width: 1000px) {
-  .left-login {
-    display: none;
-  }
+    .left-login {
+        display: none;
+    }
+}
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
+
+.card {
+    padding: 10%;
 }
