fix: login card

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,6 +13,7 @@
                     <div class="form-group">
                         <label for="InputEmail">Correo Electrónico</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [formControl]="email" required/>
+                        <small id="emailHelp" class="form-text text-muted">Su información nunca será compartida con más nadie.</small>
                     </div>
 
                     <!-- <mat-form-field>
